following from example comment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </head>
     <body>
   
+      <!-- following the example at https://www.bitdegree.org/learn/best-code-editor/?example=29900-->
+
       <h1>hello there</h1>
   
       <p>click the button to multiply the numbers</p>
@@ -38,7 +40,7 @@
   
       <script src= app.js ></script>
     </body>
-    
+
   </html>
     <script src= app.js ></script>
   </body>
