wrote more comments

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1 id='displayThis'> Stock</h1>
 
     <script src= app.js ></script>
+    <script src= extra.js ></script>
+
   </body>
 </html>
