--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 
   </head>
   <body>
+
+    <h1 id = "displayMe" ></h1>
+    <p id= "grab" > start</p>
+
+    <p id="changer"> before click</p>
+
+    <input id="submitField" type="text">
+    <button onclick="clickFunction()" type="button"> click here </button>
+
+    
+    <!-- remember to always put scripts at bottom! -->
     <script src= 'app.js' ></script>
     <script src ='relevantTutorialExamplesAndLessons.js'></script>
 
