--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 
   </head>
   <body>
+    <div id ='mainDiv'></div>
+
+    
+
+
+
     <script src= 'app.js' ></script>
     <script src ='relevantTutorialExamplesAndLessons.js'></script>
-
   </body>
 </html>
