--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
 
   </head>
   <body>
+
+
+
+    <div id='welccome'> 
+      <h1>Hello and hope you're in the mood for guessing</h1>
+      <p>Below are the results of the quiz you just took, each block has a unique country, the correct answer, what you guessed, and the hints</p>
+
+
+    </div>
     <div id ='mainDiv'></div>
-
     
-
-
 
     <script src= 'app.js' ></script>
     <script src ='relevantTutorialExamplesAndLessons.js'></script>
