--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 
 
-    <div id='welccome'> 
+    <!-- <div id='welccome'> 
       <h1>Hello and hope you're in the mood for guessing</h1>
-      <p>Below are the results of the quiz you just took, each block has a unique country, the correct answer, what you guessed, and the hints</p>
+      <p>Below are the results of the quiz you just took, each block has a unique country, the correct answer, what you guessed, and the hints</p> -->
 
 
     </div>
@@ -20,6 +20,6 @@
     
 
     <script src= 'app.js' ></script>
-    <script src ='relevantTutorialExamplesAndLessons.js'></script>
+    <script src='relevantTutorialExamplesAndLessons.js'></script>
   </body>
 </html>
